[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spinup"
version = "0.3.0"
description = "Teaching tools for introducing people to deep RL."
authors = [
    { name = "Joshua Achiam" }
]
requires-python = ">=3.8"
dependencies = [
    "cloudpickle==3",
    "cython<3", #https://github.com/openai/mujoco-py/issues/773#issuecomment-1639684035
    "gymnasium[atari,box2d]",
    "gymnasium[mujoco]",
    "mujoco-py<2.2,>=2.1",
    "ipython",
    "ipykernel",
    "joblib",
    "matplotlib==3.9.2",
    "mpi4py",
    "mujoco<3",
    "numpy",
    "opencv-python==4.10.*",
    "opencv-python-headless==4.10.*",
    "pandas",
    "pygame>=2.6",
    "pytest",
    "psutil",
    "scipy",
    "seaborn==0.13.2",
    "torch",
    "tqdm"
]

[tool.setuptools]
packages = ["spinup"]
py-modules = ["__init__"]